# knot

./: .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  base.md  knot-issues.txt  knot.md  p4.knot  stdlib.md  test_trait_error.db-shm  test_trait_error.db-wal  unit_skolem.knot
$TMPDIR/knot-test/: min.knot
.github/workflows/: clippy.yml  release-binaries.yml  release-vscode.yml
.hermes/: RECORD_MIGRATION_SPEC.md  UNIFIED_NAMESPACE_BRIEF.md
.hermes/plans/: 2026-07-22-sources-in-records.md
crates/knot/: Cargo.toml
crates/knot-compiler/: Cargo.toml  build.rs
crates/knot-compiler/src/: base.rs  builtins.rs  codegen.rs  decl_view.rs  desugar.rs  effects.rs  infer.rs  lib.rs  linker.rs  lockfile.rs  main.rs  modules.rs  sql_lint.rs  stack.rs  stratify.rs  types.rs  unused.rs  unwind.rs
crates/knot-compiler/tests/: regress_analysis_fixes.rs  regress_backend_fixes.rs  regress_bughunt_fixes.rs  regress_bughunt_fixes2.rs  regress_bughunt_fixes3.rs  regress_bughunt_fixes4.rs  regress_cli.rs  regress_codegen_fixes.rs  regress_crash_fixes6.rs  regress_deep_do.rs  regress_effects.rs  regress_effects_fixes2.rs  regress_implicit_dict.rs  regress_infer.rs  regress_infer_fixes.rs  regress_infer_fixes2.rs  regress_infer_fixes3.rs  regress_infer_fixes4.rs  regress_infer_fixes5.rs  regress_infer_fixes6.rs  regress_knot_issues.rs  regress_maybe_json.rs  regress_middleend_fixes.rs  regress_modules.rs  regress_param_type_alias.rs  regress_pushdown_fixes.rs  regress_rank_n.rs  regress_record_data_ctor.rs  regress_record_type_ctor.rs  regress_record_value_sig.rs  regress_reserved_columns.rs  regress_runtime_fixes.rs  regress_schema_contract.rs  regress_show_units.rs  regress_sql_pushdown.rs  regress_trait_dispatch.rs  regress_type_args.rs  zzz_probe_escape.rs
crates/knot-lsp/: Cargo.toml
crates/knot-lsp/src/: analysis.rs  builtins.rs  call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  defs.rs  diagnostics.rs  document_highlight.rs  document_link.rs  document_symbol.rs  folding.rs  formatting.rs  goto.rs  hover.rs  incremental.rs  inlay_hints.rs  legend.rs  linked_editing.rs  main.rs  parsed_type.rs  references.rs  regress_sync_nav_fixes_tests.rs  rename.rs  selection_range.rs  semantic_tokens.rs  shared.rs  signature_help.rs  state.rs  test_support.rs  type_format.rs  type_hierarchy.rs  utils.rs  verification_pass4_tests.rs  workspace_diagnostics.rs  workspace_symbol.rs
crates/knot-runtime/: Cargo.toml
crates/knot-runtime/src/: lib.rs  log.rs  tui.rs
crates/knot/src/: ast.rs  diagnostic.rs  format.rs  lexer.rs  lib.rs  parser.rs
crates/knot/tests/: format.rs  format_roundtrip.rs  parser.rs  regress_frontend_fixes.rs  regress_frontend_fixes2.rs  regress_frontend_fixes3.rs  regress_frontend_fixes4.rs  regress_frontend_fixes5.rs  regress_frontend_fixes6.rs  regress_frontend_fixes7.rs  regress_frontend_fixes8.rs  zz_audit_probe.rs  zz_probe.rs  zzz_audit_scratch.rs  zzz_fmt_probe.rs
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: knot.tmLanguage.json
examples/: .gitignore  associated_types.knot  builtins.knot  bytes.knot  cons_pattern.knot  constraints.knot  crypto.knot  find_first.knot  fold_stream.knot  for_each.knot  groupby.knot  hash.knot  hello.knot  implicit_dictionaries.knot  inline_pushdown.knot  json.knot  let_pushdown.knot  log_test.knot  maybe.knot  nested.knot  ord.knot  query_opt.knot  race.knot  recursive.knot  required_args.knot  result.knot  routes.knot  showcase.knot  stm_row_filter.knot  temporal.knot  todo.knot  trait_replacement.knot  traits.knot  uuid.knot  views.knot  views_history.knot  when_unless.knot
examples/modules/: main.knot  transitive.knot  types.knot  utils.knot
examples/modules/lib/: core.knot  helpers.knot
src/: ast.rs  lexer.rs
tests/: parser.rs
tools/migrate/: Cargo.toml
tools/migrate/src/: diagnostic.rs  format.rs  main.rs  parser.rs
tree-sitter-knot/: grammar.js  package.json  tree-sitter.json
tree-sitter-knot/queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm
tree-sitter-knot/src/: grammar.json  node-types.json  parser.c  scanner.c
