[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
knot = { path = "crates/knot" }
knot-runtime = { path = "crates/knot-runtime" }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"
rusqlite = { version = "0.34", features = ["bundled"] }
tiny_http = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
