[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[workspace.dependencies]
knot = { path = "crates/knot" }
knot-compiler = { path = "crates/knot-compiler" }
knot-runtime = { path = "crates/knot-runtime" }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"
rusqlite = { version = "0.39", features = ["bundled", "collation"] }
tiny_http = "0.12"
ureq = "3"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1"
ariadne = "0.6"
