[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# panic = "unwind" (the default) is load-bearing: the runtime's catch_unwind
# recovery sites (HTTP worker 500 responses, race-loser cancellation, atomic
# rollback on handler panic) depend on it. Unwinding across the FFI boundary
# into Cranelift-generated code is sound because (a) every runtime function
# callable from generated code is `extern "C-unwind"`, and (b) the compiler
# emits .eh_frame unwind info for every generated function (knot-compiler's
# unwind.rs), so the system unwinder can walk those frames.

[workspace.dependencies]
knot = { path = "crates/knot" }
knot-compiler = { path = "crates/knot-compiler" }
knot-runtime = { path = "crates/knot-runtime" }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
cranelift-native = "0.131"
target-lexicon = "0.13"
rusqlite = { version = "0.39", features = ["bundled", "collation"] }
tiny_http = "0.12"
ureq = "3"
serde_json = "1"
ariadne = "0.6"
