[package]
name = "knot-compiler"
version.workspace = true
edition.workspace = true

[lib]
name = "knot_compiler"
path = "src/lib.rs"

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
knot = { workspace = true }
knot-runtime = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-native = { workspace = true }
target-lexicon = { workspace = true }
# .eh_frame emission for generated functions (see src/unwind.rs) — versions
# pinned to what cranelift 0.131 itself uses.
gimli = { version = "0.33", default-features = false, features = ["write"] }
object = { version = "0.39", default-features = false, features = ["write"] }
