[package]
name = "knot-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "knot-lsp"
path = "src/main.rs"

[dependencies]
knot = { workspace = true }
knot-compiler = { workspace = true }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
