[package]
name = "knot-runtime"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rusqlite = { workspace = true }
tiny_http = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
getrandom = "0.3"
