[package]
name = "knot-runtime"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
rusqlite = { workspace = true }
tiny_http = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
getrandom = "0.3"
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
ureq = { workspace = true }
