[package]
name = "knot-runtime"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
# Enable GC telemetry counters (fetch_add per allocation).  Off by default
# in release for zero overhead; turn on for profiling via
# `cargo build --release --features gc-stats`.
gc-stats = []

[dependencies]
rusqlite = { workspace = true }
tiny_http = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
getrandom = "0.4"
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = { version = "1", default-features = false }
serde_json = { workspace = true }
ureq = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
